[package]
name = "raydium-amm-swap"
version = "0.1.5"
edition = "2024"
authors = ["Nikita Pozniakov"]
description = "A high‑level client for interacting with Raydium AMM pools on Solana"
repository = "https://github.com/emochka2007/raydium-swap"
license = "MIT"
keywords = ["solana", "raydium"]

[dependencies]
solana-client = "3.1.2"
reqwest = { version = "0.12.22", features = ["json"] }
solana-commitment-config = "3.1.0"
solana-sdk = "3.0.0"
tokio = "1.46.1"
borsh = { version = "1.5.5", features = ["derive"] }
spl-associated-token-account = "8.0.0"
spl-token = "9.0.0"
tracing = "0.1.41"
anyhow = "1.0.98"
anchor-lang = { version = "0.32.1" }
anchor-spl = { version = "0.32.1" }
solana-system-interface = { version = "3.0.0", features = ["bincode"] }
serde = { version = "1.0.219", features = ["derive"] }
