[package]
name = "raydium-amm-swap"
version = "0.1.5"
edition = "2024"
authors = ["Nikita Pozniakov"]
description = "A high‑level client for interacting with Raydium AMM pools on Solana"
repository = "https://github.com/emochka2007/raydium-swap"
license = "MIT"
keywords = ["solana", "raydium"]

[dependencies]
solana-client = "3.1.2"
reqwest = { version = "0.12.22", features = ["json"] }
solana-commitment-config = "3.1.0"
solana-sdk = "3.0.0"
tokio = { version = "1.46.1", features = ["rt", "rt-multi-thread", "macros"] }
borsh = { version = "1.5.5", features = ["derive"] }
spl-associated-token-account = "8.0.0"
spl-token = "9.0.0"
tracing = "0.1.41"
anyhow = "1.0.98"
anchor-lang = { version = "0.31.0", features = ["init-if-needed"] }
anchor-spl = { version = "0.31.0", features = [
    "associated_token",
    "token",
    "token_2022",
    "token_2022_extensions",
    "metadata",
    "memo",
] }
solana-system-interface = { version = "3.0.0", features = ["bincode"] }
serde = { version = "1.0.219", features = ["derive"] }
dotenvy = "0.15.7"
raydium-amm-v3 = { git = "https://github.com/raydium-io/raydium-clmm", features = [
    "no-entrypoint",
    "cpi",
    "client",
] }
spl-memo = "6.0.0"
anchor-client = "0.32.1"
spl-token-2022 = "8.0.1"
solana-account-decoder = "2.3.13"
serde_json = "1.0.145"
base64 = "0.21.7"
solana-transaction-status = "3.1.2"
bincode = "1.3.3"
hex = "0.4.3"
arrayref = "0.3.9"
solana-pubkey = "2.4.0"
solana-address = { version = "2.0.0", features = ["decode"] }
clap = { version = "4.5.20", features = ["derive"] }
rand = "0.8.5"
solana-program = "<1.17.0"
uint = { git = "https://github.com/raydium-io/parity-common", package = "uint" }
bytemuck = { version = "1.19.0", features = ["derive", "min_const_generics"] }
solana-program-pack = "2.2.1"
